--- a/src/style.css
+++ b/src/style.css
@@ -3,3 +3,10 @@
   vertical-align: top;
   border: 1px solid salmon;
 }
+
+canvas {
+  border: 1px solid #000000;
+  border-radius: 15px;
+  filter: drop-shadow(5px 5px 8px #000000);
+  fill: #ffffff;
+}
