--- a/src/style.css
+++ b/src/style.css
@@ -7,7 +7,7 @@
 canvas {
   border: 1px solid #000000;
   border-radius: 15px;
-  filter: drop-shadow(5px 5px 8px #000000);
+  /*filter: drop-shadow(5px 5px 8px #000000);*/
   fill: #ffffff;
   cursor: none;
 }
