refactored tool size to allow larger sizes, new tool size buttons to increase by 5, styled buttons with html and css to be nicer (stage 11 complete)

--- a/src/style.css
+++ b/src/style.css
@@ -11,3 +11,14 @@ canvas {
   fill: #ffffff;
   cursor: none;
 }
+
+button {
+  width: 80px;
+  height: 30px;
+  font-size: medium;
+}
+
+p {
+  font-size: x-large;
+  line-height: 0;
+}
